# dx12-project

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  config.yaml  example_config.yaml  path-tracex.sln
assets/: Intergalactic_Spaceship.mtl  Intergalactic_Spaceship_no_maps.mtl  materialtest.mtl  sphere-noMap.mtl  sphere.mtl  sphereNoMaps.mtl  weeping_willow.pov
assets/TREES/: Arbaro_1.mtl  Arbaro_2.mtl  Arbaro_3.mtl  black_tupelo.mtl  tree.mtl  weeping_willow.mtl
path-tracex/: App.cpp  App.h  Helper.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  PixelShader.hlsl  Renderer.cpp  Renderer.h  StringUtil.h  VertexShader.hlsl  Window.cpp  Window.h  path-tracex.vcxproj  path-tracex.vcxproj.filters
path-tracex/include/: App.h  Window.h
path-tracex/src/: App.cpp  Renderer.cpp  WinMain.cpp  Window.cpp
scenes/: Cornell box cubes.yaml  Cornell box sphere.yaml  MapsShowcase.yaml  New Scene bD4iu.yaml  New Scene.yaml  Pong.yaml  Scene.yaml  raytest.yaml  raytex.yaml
shaders/: Common.hlsl  Hit.hlsl  LinePixelShader.hlsl  LineVertexShader.hlsl  MotionBlur.hlsl  PixelShader.hlsl  PongHit.hlsl  PongMiss.hlsl  PongRayGen.hlsl  PostProcessing.hlsl  Random.hlsl  Randomness.hlsl  RayGen.hlsl  Sampling.hlsl  ShadowRay.hlsl  TAA.hlsl  VertexShader.hlsl
src/: App.cpp  App.h  CMakeLists.txt  Camera.cpp  Camera.h  Culling.cpp  Culling.h  DXConstantBuffer.cpp  DXConstantBuffer.h  DXDevice.h  DXIndexBuffer.cpp  DXIndexBuffer.h  DXPipeline.h  DXRenderer.cpp  DXRenderer.h  DXVertexBuffer.cpp  DXVertexBuffer.h  Event.cpp  Event.h  EventCallback.h  Exceptions.cpp  Exceptions.h  FastNoiseLite.h  GUI.cpp  GUI.h  GraphicsAPI.h  Helper.h  ImguiManager.cpp  ImguiManager.h  InputHandler.cpp  InputHandler.h  KeyEvent.h  Keyboard.cpp  Keyboard.h  Light.h  Logger.cpp  Logger.h  Material.h  Model.cpp  Model.h  (+43 more)
